--- a/css/estilo.css
+++ b/css/estilo.css
@@ -42,3 +42,44 @@ header h1 {
 	-ms-transform: scale(1) rotate(180deg);
 	transform: scale(1) rotate(180deg);
 }
+.modal-cover{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.7);
+	display: none;
+}
+.modal{
+
+border-radius: 20px;
+background-color: #fff;
+width: 70%;
+text-align: center;
+margin: 10% auto;
+
+
+}
+
+.form-center{
+
+}
+.form-center label{
+	width: 100%;
+	display: inline-block;
+	font-size: 20px;
+	margin: 10px;
+}
+ .form-center textarea{
+ 	width: 60%;
+ 	height: 300px;
+	display: block;
+ 	margin: 0 auto;
+ }
+
+ .btn-submit{
+ 	width: 100px;
+ 	padding: 10px;
+ 	margin: 20px;
+ 	
+
+ }
